# step3

./: CMakeLists.txt  COPYRIGHT  README.md  common.h  crawler.cpp  crawler.h  doc_processor.cpp  doc_processor.h  file_ops.cpp  file_ops.h  grasp.cpp  grasp.h  language_detection.h  main.cpp  options.cpp  options.h  plain_text_processor.cpp  plain_text_processor.h  postgresql.cpp  postgresql.h  warehouse.cpp  warehouse.h
.github/: FUNDING.yml
etc/: lang_sources.txt  language.conf  signature_generation  words.json
etc/approot/: text.xml  text_es.xml  trokam_step_3.xml
etc/info/: about  develop  donate  news  trokam_cla.txt
etc/languages/: arabic.txt  chinese.txt  dutch.txt  english.txt  french.txt  german.txt  hebrew.txt  indonesian.txt  italian.txt  japanese.txt  korean.txt  persian.txt  polish.txt  portuguese.txt  russian.txt  spanish.txt  swedish.txt  thai.txt  turkish.txt  ukrainian.txt  vietnamese.txt
etc/signature/: arabic.lm  chinese.lm  dutch.lm  english.lm  french.lm  german.lm  hebrew.lm  indonesian.lm  italian.lm  japanese.lm  korean.lm  persian.lm  polish.lm  portuguese.lm  russian.lm  spanish.lm  swedish.lm  thai.lm  turkish.lm  ukrainian.lm  vietnamese.lm
etc/style/: trokam.css  trokam_common.css  trokam_dark.css  trokam_light.css
etc/trokam/signature/: dutch.lm  english.lm  german.lm  korean.lm  portuguese.lm  russian.lm  swedish.lm
include/: appGenerator.h  app_generator.h  bundle.h  cloud_control.h  common.h  control.h  crawler.h  doc_processor.h  events.h  file_ops.h  language_detection.h  node.h  options.h  plain_text_processor.h  postgresql.h  preferences.h  qa_cache.h  readable_content_db.h  remote_control.h  searchPage.h  searchWidget.h  search_page.h  sharedResources.h  shared_resources.h  topWindow.h  transfers.h  warehouse.h  writable_content_db.h  xearchPage.h
not_used/: fileOps.h  options.cpp  pageInfo.h  text.xml
src/: control.cpp  fileOps.cpp  mainWebSearch.cpp  pageInfo.cpp  searchWidget.cpp
src_cleaner/: main.cpp
src_cmd/: crawler.cpp  crawler.h  doc_processor.cpp  main.cpp  warehouse.cpp
src_common/: file_ops.cpp  grasp.cpp  options.cpp  plain_text_processor.cpp  postgresql.cpp  readable_content_db.cpp  transfers.cpp  writable_content_db.cpp
src_conveyor/: cloud_control.cpp  main.cpp  main_prime.cpp  node.cpp  remote_control.cpp  transfers.cpp
src_crawler/: crawler.cpp  doc_processor.cpp  main.cpp  warehouse.cpp
src_pump/: main.cpp
src_transport/: cloud_control.cpp  node.cpp  remote_control.cpp  transfers.cpp
src_web/: appGenerator.cpp  app_generator.cpp  events.cpp  main.cpp  mainWebSearch.cpp  pageWidget.cpp  preferences.cpp  qa_cache.cpp  searchPage.cpp  searchWidget.cpp  search_page.cpp  sharedResources.cpp  shared_resources.cpp  textStore.cpp  topWindow.cpp
